crates/java-syntax/tests/snapshots/parser_snapshots__parse_instanceof_expr.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    String field;
    void test() {
        if (a instanceof String) {}
    }

    void test(String s) {}
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "field"
SEMICOLON ";"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IF_KW "if"
WHITESPACE " "
L_PAREN "("
IDENTIFIER "a"
WHITESPACE " "
INSTANCEOF_KW "instanceof"
WHITESPACE " "
IDENTIFIER "String"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "s"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..121
  CLASS_DECL@0..120
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..120
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      FIELD_DECL@17..30
        TYPE@17..23
          QUALIFIED_NAME@17..23
            IDENTIFIER@17..23 "String"
        WHITESPACE@23..24 " "
        VARIABLE_DECLARATOR_LIST@24..29
          VARIABLE_DECLARATOR@24..29
            IDENTIFIER@24..29 "field"
        SEMICOLON@29..30 ";"
      WHITESPACE@30..35 "\n    "
      METHOD_DECL@35..90
        VOID_KW@35..39 "void"
        WHITESPACE@39..40 " "
        IDENTIFIER@40..44 "test"
        FORMAL_PARAMETERS@44..46
          L_PAREN@44..45 "("
          R_PAREN@45..46 ")"
        WHITESPACE@46..47 " "
        BLOCK@47..90
          L_BRACE@47..48 "{"
          WHITESPACE@48..57 "\n        "
          IF_STMT@57..84
            IF_KW@57..59 "if"
            WHITESPACE@59..60 " "
            PARENTHESIZED_EXPR@60..81
              L_PAREN@60..61 "("
              INSTANCEOF_EXPR@61..80
                LITERAL@61..62
                  IDENTIFIER@61..62 "a"
                WHITESPACE@62..63 " "
                INSTANCEOF_KW@63..73 "instanceof"
                WHITESPACE@73..74 " "
                TYPE@74..80
                  QUALIFIED_NAME@74..80
                    IDENTIFIER@74..80 "String"
              R_PAREN@80..81 ")"
            WHITESPACE@81..82 " "
            BLOCK@82..84
              L_BRACE@82..83 "{"
              R_BRACE@83..84 "}"
          WHITESPACE@84..89 "\n    "
          R_BRACE@89..90 "}"
      WHITESPACE@90..96 "\n\n    "
      METHOD_DECL@96..118
        VOID_KW@96..100 "void"
        WHITESPACE@100..101 " "
        IDENTIFIER@101..105 "test"
        FORMAL_PARAMETERS@105..115
          L_PAREN@105..106 "("
          FORMAL_PARAMETER@106..114
            TYPE@106..112
              QUALIFIED_NAME@106..112
                IDENTIFIER@106..112 "String"
            WHITESPACE@112..113 " "
            IDENTIFIER@113..114 "s"
          R_PAREN@114..115 ")"
        WHITESPACE@115..116 " "
        BLOCK@116..118
          L_BRACE@116..117 "{"
          R_BRACE@117..118 "}"
      WHITESPACE@118..119 "\n"
      R_BRACE@119..120 "}"
  WHITESPACE@120..121 "\n"
