crates/java-syntax/tests/snapshots/parser_snapshots__parse_interface_with_abstract_method.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
interface A { void f(); }
TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..25
  INTERFACE_DECL@0..25
    INTERFACE_KW@0..9 "interface"
    WHITESPACE@9..10 " "
    IDENTIFIER@10..11 "A"
    WHITESPACE@11..12 " "
    INTERFACE_BODY@12..25
      L_BRACE@12..13 "{"
      WHITESPACE@13..14 " "
      METHOD_DECL@14..23
        VOID_KW@14..18 "void"
        WHITESPACE@18..19 " "
        IDENTIFIER@19..20 "f"
        FORMAL_PARAMETERS@20..22
          L_PAREN@20..21 "("
          R_PAREN@21..22 ")"
        SEMICOLON@22..23 ";"
      WHITESPACE@23..24 " "
      R_BRACE@24..25 "}"
