crates/java-syntax/tests/snapshots/parser_snapshots__parse_interface_with_default_method.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
interface A { default void f() {} }
TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
DEFAULT_KW "default"
WHITESPACE " "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..35
  INTERFACE_DECL@0..35
    INTERFACE_KW@0..9 "interface"
    WHITESPACE@9..10 " "
    IDENTIFIER@10..11 "A"
    WHITESPACE@11..12 " "
    INTERFACE_BODY@12..35
      L_BRACE@12..13 "{"
      WHITESPACE@13..14 " "
      METHOD_DECL@14..33
        MODIFIER_LIST@14..21
          DEFAULT_KW@14..21 "default"
        WHITESPACE@21..22 " "
        VOID_KW@22..26 "void"
        WHITESPACE@26..27 " "
        IDENTIFIER@27..28 "f"
        FORMAL_PARAMETERS@28..30
          L_PAREN@28..29 "("
          R_PAREN@29..30 ")"
        WHITESPACE@30..31 " "
        BLOCK@31..33
          L_BRACE@31..32 "{"
          R_BRACE@32..33 "}"
      WHITESPACE@33..34 " "
      R_BRACE@34..35 "}"
