crates/java-syntax/tests/snapshots/parser_snapshots__parse_interface_with_field_like_member.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
interface A { int X = 1; }
TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "X"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..26
  INTERFACE_DECL@0..26
    INTERFACE_KW@0..9 "interface"
    WHITESPACE@9..10 " "
    IDENTIFIER@10..11 "A"
    WHITESPACE@11..12 " "
    INTERFACE_BODY@12..26
      L_BRACE@12..13 "{"
      WHITESPACE@13..14 " "
      FIELD_DECL@14..24
        TYPE@14..17
          INT_KW@14..17 "int"
        WHITESPACE@17..18 " "
        VARIABLE_DECLARATOR_LIST@18..23
          VARIABLE_DECLARATOR@18..23
            IDENTIFIER@18..19 "X"
            WHITESPACE@19..20 " "
            EQUAL@20..21 "="
            WHITESPACE@21..22 " "
            LITERAL@22..23
              INTEGER_LITERAL@22..23 "1"
        SEMICOLON@23..24 ";"
      WHITESPACE@24..25 " "
      R_BRACE@25..26 "}"
