crates/java-syntax/tests/snapshots/parser_snapshots__parse_interface_with_type_parameters.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
public interface A<T, U> {}
TOKENS:
PUBLIC_KW "public"
WHITESPACE " "
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
LESS "<"
IDENTIFIER "T"
COMMA ","
WHITESPACE " "
IDENTIFIER "U"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..27
  INTERFACE_DECL@0..27
    MODIFIER_LIST@0..6
      PUBLIC_KW@0..6 "public"
    WHITESPACE@6..7 " "
    INTERFACE_KW@7..16 "interface"
    WHITESPACE@16..17 " "
    IDENTIFIER@17..18 "A"
    TYPE_PARAMETERS@18..24
      LESS@18..19 "<"
      TYPE_PARAMETER@19..20
        IDENTIFIER@19..20 "T"
      COMMA@20..21 ","
      WHITESPACE@21..22 " "
      TYPE_PARAMETER@22..23
        IDENTIFIER@22..23 "U"
      GREATER@23..24 ">"
    WHITESPACE@24..25 " "
    INTERFACE_BODY@25..27
      L_BRACE@25..26 "{"
      R_BRACE@26..27 "}"
