crates/java-syntax/tests/snapshots/parser_snapshots__parse_labeled_stmt.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func() {
        label: {
            func();
        }

        labelNoShortIf: func();
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IDENTIFIER "label"
COLON ":"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n            "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n        "
R_BRACE "}"
WHITESPACE "\n\n        "
IDENTIFIER "labelNoShortIf"
COLON ":"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..119
  CLASS_DECL@0..118
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..118
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..116
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "func"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..116
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          LABELED_STMT@39..77
            IDENTIFIER@39..44 "label"
            COLON@44..45 ":"
            WHITESPACE@45..46 " "
            BLOCK@46..77
              L_BRACE@46..47 "{"
              WHITESPACE@47..60 "\n            "
              EXPRESSION_STMT@60..67
                METHOD_CALL@60..66
                  LITERAL@60..64
                    IDENTIFIER@60..64 "func"
                  ARGUMENT_LIST@64..66
                    L_PAREN@64..65 "("
                    R_PAREN@65..66 ")"
                SEMICOLON@66..67 ";"
              WHITESPACE@67..76 "\n        "
              R_BRACE@76..77 "}"
          WHITESPACE@77..87 "\n\n        "
          LABELED_STMT@87..110
            IDENTIFIER@87..101 "labelNoShortIf"
            COLON@101..102 ":"
            WHITESPACE@102..103 " "
            EXPRESSION_STMT@103..110
              METHOD_CALL@103..109
                LITERAL@103..107
                  IDENTIFIER@103..107 "func"
                ARGUMENT_LIST@107..109
                  L_PAREN@107..108 "("
                  R_PAREN@108..109 ")"
              SEMICOLON@109..110 ";"
          WHITESPACE@110..115 "\n    "
          R_BRACE@115..116 "}"
      WHITESPACE@116..117 "\n"
      R_BRACE@117..118 "}"
  WHITESPACE@118..119 "\n"
